package main

type Product interface {
	Step1()
	Step2()
	Describe()
}
